add header structure and search functionality to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,40 @@
     <title>Youtube Clone</title>
 </head>
 <body>
-    
+    <div class="container">
+        <!--Header-->
+        <header>
+            <div class="header-left">
+                <div class="menu-icon">
+                    <span class="icon icon-menu"></span>
+                </div>
+            </div>
+            <div class="logo">
+                <div class="logo-icon"></div>
+                <span logo-text>YouTube</span>
+            </div>
+
+            <div class="header-center">
+                <div class="seach-container">
+                    <input type="text" class="search-input" placeholder="seach">
+                    <button class="search-button">
+                        <span class="icon icon-mic"></span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="header-right">
+                <div class="icon-button">
+                    <span class="icon icon-video"></span>
+                </div>
+                <div class="icon-button">
+                    <span class="icon icon-bell"></span>
+                </div>
+                <div class="avatar">
+                    <span class="icon icon-user"></span>
+                </div>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
